--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,10 +37,11 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:15.0.0'
     implementation 'com.google.android.gms:play-services-places:15.0.1'
     //implementation 'com.android.volley:volley:1.1.1'
-    implementation group: 'org.apache.httpcomponents' , name: 'httpclient-android' , version: '4.3.5.1'
+    implementation 'org.apache.httpcomponents:httpclient-android:4.3.5.1'
     implementation 'com.squareup.okhttp:okhttp:2.5.0'
     implementation 'com.google.android.gms:play-services-auth:15.0.1'
-
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
